First deploy to stage

--- a/bebeclick/Web.config
+++ b/bebeclick/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-bebeclick-20140430065431.mdf;Initial Catalog=aspnet-bebeclick-20140430065431;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Bebeclick-20140430065431.mdf;Initial Catalog=aspnet-Bebeclick-20140430065431;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -21,6 +21,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
+    <globalization enableClientBasedCulture="true" uiCulture="auto" culture="auto"/>
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
