StateProvince business object introduced

--- a/bebeclick/Web.Release.config
+++ b/bebeclick/Web.Release.config
@@ -8,12 +8,14 @@
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an attribute "name" that has a value of "MyDB".
 
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="ApplicationServices" 
+         connectionString="Server=localhost;Initial Catalog=BebeclickStorage;Integrated Security=false;User ID=BebeclickUser;Password=b3b3u$eR" 
+         providerName="System.Data.SqlClient"
+         xdt:Transform="SetAttributes" 
+         xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
