--- a/bebeclick/Web.config
+++ b/bebeclick/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -7,10 +7,10 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Bebeclick-20140430065431.mdf;Initial Catalog=aspnet-Bebeclick-20140430065431;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="Server=.\SQLEXPRESS;Initial Catalog=BebeclickStorage;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,10 +18,23 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
+    <alias alias="IPortalRepository" type="Bebeclick.WebClient.IPortalRepository, Bebeclick.WebClient"/>
+    <alias alias="SqlPortalRepository" type="Bebeclick.WebClient.SQL.SqlPortalRepository, Bebeclick.WebClient"/>
+    <container>
+      <register type="IPortalRepository" mapTo="SqlPortalRepository">
+        <lifetime type="Microsoft.Practices.Unity.ContainerControlledLifetimeManager, Microsoft.Practices.Unity" />
+        <constructor>
+          <param name="connectionStringName" value="ApplicationServices"/>
+        </constructor>
+      </register>
+    </container>
+  </unity>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
-    <globalization enableClientBasedCulture="true" uiCulture="auto" culture="auto"/>
+    <customErrors mode="Off"></customErrors>
+    <globalization enableClientBasedCulture="true" uiCulture="auto" culture="auto" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
@@ -49,7 +62,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
