--- a/bebeclick.webclient/Bebeclick.WebClient.csproj
+++ b/bebeclick.webclient/Bebeclick.WebClient.csproj
@@ -52,6 +52,11 @@
   <ItemGroup>
     <Compile Include="BusinessBase.cs" />
     <Compile Include="IPortalRepository.cs" />
+    <Compile Include="Resources\Portal.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Portal.resx</DependentUpon>
+    </Compile>
     <Compile Include="Service.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rainbow.cs" />
@@ -60,9 +65,17 @@
     <Compile Include="SQL\SqlPortalRepository.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="StateProvince.cs" />
+    <Compile Include="Utilities\ResourceStringLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Portal.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Portal.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
