Testing with mvc models and controllers

--- a/bebeclick.webclient/Bebeclick.WebClient.csproj
+++ b/bebeclick.webclient/Bebeclick.WebClient.csproj
@@ -65,6 +65,7 @@
     <Compile Include="SQL\SqlPortalRepository.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Province.cs" />
+    <Compile Include="AccessControl.cs" />
     <Compile Include="StateEntity.cs" />
     <Compile Include="Utilities\DateTime.cs" />
     <Compile Include="Utilities\ResourceStringLoader.cs" />
