--- a/bebeclick/bebeclick.csproj
+++ b/bebeclick/bebeclick.csproj
@@ -176,9 +176,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\HomeIndexViewModel.cs" />
+    <Compile Include="Models\HomeViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\PortalModels.cs" />
+    <Compile Include="Models\ProductModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -188,6 +188,7 @@
     <Content Include="Content\default.css" />
     <Content Include="Content\fonts.css" />
     <Content Include="Content\images\corazon.png" />
+    <Content Include="Content\images\cuarto.jpg" />
     <Content Include="Content\images\fb_icon.png" />
     <Content Include="Content\images\home.png" />
     <Content Include="Content\images\like.png" />
@@ -197,6 +198,7 @@
     <Content Include="Content\images\pt_icon.png" />
     <Content Include="Content\images\shop.png" />
     <Content Include="Content\images\tw_icon.png" />
+    <Content Include="Content\homeIndex.css" />
     <Content Include="favicon.ico" />
     <Content Include="Content\fonts\opensans-bold-webfont.svg" />
     <Content Include="Content\fonts\opensans-bolditalic-webfont.svg" />
