--- a/bebeclick/bebeclick.csproj
+++ b/bebeclick/bebeclick.csproj
@@ -198,7 +198,9 @@
     <Content Include="Content\fonts.css" />
     <Content Include="Content\images\corazon.png" />
     <Content Include="Content\images\cuarto.jpg" />
+    <Content Include="Content\images\facebook.png" />
     <Content Include="Content\images\fb_icon.png" />
+    <Content Include="Content\images\google.png" />
     <Content Include="Content\images\home.png" />
     <Content Include="Content\images\like.png" />
     <Content Include="Content\images\logo.png" />
