--- a/bebeclick/Web.config
+++ b/bebeclick/Web.config
@@ -7,10 +7,10 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration"/>
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
   </configSections>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="Server=.\SQLEXPRESS;Initial Catalog=BebeclickStorage;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
+    <add name="ApplicationServices" connectionString="Server=.\SQLEXPRESS;Initial Catalog=BebeclickStorage;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -19,13 +19,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
-    <alias alias="IPortalRepository" type="Bebeclick.WebClient.IPortalRepository, Bebeclick.WebClient"/>
-    <alias alias="SqlPortalRepository" type="Bebeclick.WebClient.SQL.SqlPortalRepository, Bebeclick.WebClient"/>
+    <alias alias="IPortalRepository" type="Bebeclick.WebClient.IPortalRepository, Bebeclick.WebClient" />
+    <alias alias="SqlPortalRepository" type="Bebeclick.WebClient.SQL.SqlPortalRepository, Bebeclick.WebClient" />
     <container>
       <register type="IPortalRepository" mapTo="SqlPortalRepository">
         <lifetime type="Microsoft.Practices.Unity.ContainerControlledLifetimeManager, Microsoft.Practices.Unity" />
         <constructor>
-          <param name="connectionStringName" value="ApplicationServices"/>
+          <param name="connectionStringName" value="ApplicationServices" />
         </constructor>
       </register>
     </container>
@@ -41,7 +41,12 @@
     <modules>
       <remove name="FormsAuthenticationModule" />
     </modules>
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
