--- a/bebeclick/Web.config
+++ b/bebeclick/Web.config
@@ -17,6 +17,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="Facebook:AppId" value="770000323020014"/>
+    <add key="Facebook:AppSecret" value="1a3c82df9d64007bc20ec26bc524d9ec"/>
+    <add key="Google:ClientId" value="676333113969-qmannacftg8aoe2rhl0e01o2jpa1ku88.apps.googleusercontent.com"/>
+    <add key="Google:ClientSecret" value="w4KoCgadkbzR7v9sepgGdVjt"/>
   </appSettings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <alias alias="IPortalRepository" type="Bebeclick.WebClient.IPortalRepository, Bebeclick.WebClient" />
