--- a/bebeclick/bebeclick.csproj
+++ b/bebeclick/bebeclick.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\LoginDetailsHelper.cs" />
     <Compile Include="Migrations\201405261752409_InitialCreate.cs" />
     <Compile Include="Migrations\201405261752409_InitialCreate.Designer.cs">
       <DependentUpon>201405261752409_InitialCreate.cs</DependentUpon>
@@ -216,6 +217,7 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\account\editProfile.css" />
     <Content Include="Content\account\externalLogin.css" />
     <Content Include="Content\account\manage.css" />
     <Content Include="Content\account\register.css" />
@@ -224,9 +226,12 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\default.css" />
     <Content Include="Content\fonts.css" />
+    <Content Include="Content\images\home\01.jpg" />
+    <Content Include="Content\images\home\02.jpg" />
+    <Content Include="Content\images\home\03.jpg" />
+    <Content Include="Content\images\home\04.jpg" />
     <Content Include="Content\images\config_icon.png" />
     <Content Include="Content\images\corazon.png" />
-    <Content Include="Content\images\cuarto.jpg" />
     <Content Include="Content\images\facebook.png" />
     <Content Include="Content\images\fb_icon.png" />
     <Content Include="Content\images\google.png" />
@@ -485,6 +490,7 @@
     <Content Include="Views\Enterprise\Index.cshtml" />
     <Content Include="Views\Home\Terms.cshtml" />
     <Content Include="Views\Account\LoginPartial.cshtml" />
+    <Content Include="Views\Account\EditProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
